# bot22

./: .env.example  .gitignore  DEPLOY_DIGITAL_OCEAN.md  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py  traders.json
backend/: app.py  config.py  copy_engine.py  models.py  monitor.py  traders_db.py
frontend/: index.html
