[project]
name = "polymarket-copybot"
version = "1.0.0"
description = "Polymarket copy-trading bot with dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "py-clob-client-v2>=1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
